--- a/TicTacToe.ipynb
+++ b/TicTacToe.ipynb
@@ -2,18 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X | X | O\n",
-      "O | X | O\n",
-      "X | O | X\n",
+      "Welcome to Tic Tac Toe!\n",
       "\n",
-      "3rd: Winner is X\n"
+      "Do you wanna be X or O?: x\n",
+      "Choose a block (e.g. TopL, MidM, BottomR): TopL\n",
+      "X |   |  \n",
+      "  |   |  \n",
+      "  |   |  \n",
+      "\n",
+      "Choose a block (e.g. TopL, MidM, BottomR): MidM\n",
+      "X |   |  \n",
+      "  | X |  \n",
+      "  |   |  \n",
+      "\n",
+      "Choose a block (e.g. TopL, MidM, BottomR): BottomR\n",
+      "X |   |  \n",
+      "  | X |  \n",
+      "  |   | X\n",
+      "\n",
+      "Winner is: Player (X)\n"
      ]
     }
    ],
@@ -25,24 +39,24 @@
     "player = ''\n",
     "bot = ''\n",
     "board = {\n",
-    "    'TopL':'X',\n",
-    "    'TopM':'X',\n",
-    "    'TopR':'O',\n",
-    "    'MidL':'O',\n",
-    "    'MidM':'X',\n",
-    "    'MidR':'O', \n",
-    "    'BottomL':'X',\n",
-    "    'BottomM':'O',\n",
-    "    'BottomR':'X',    \n",
+    "    'TopL':' ',\n",
+    "    'TopM':' ',\n",
+    "    'TopR':' ',\n",
+    "    'MidL':' ',\n",
+    "    'MidM':' ',\n",
+    "    'MidR':' ', \n",
+    "    'BottomL':' ',\n",
+    "    'BottomM':' ',\n",
+    "    'BottomR':' ',    \n",
     "    \n",
     "}\n",
     "\n",
     "#get Player's choice\n",
     "def getPlayerChoice():\n",
     "    global player, bot    \n",
-    "    player = input('Do you wanna be X or O?: ').upper()\n",
+    "    while(player not in ('X', 'O') ):\n",
+    "        player = input('Do you wanna be X or O?: ').upper()\n",
     "    bot = 'O' if player =='X' else 'X'\n",
-    "    #return player, bot\n",
     "\n",
     "#print board's current status\n",
     "def printBoard():\n",
@@ -55,29 +69,36 @@
     "def getPlayerInput():\n",
     "    global player\n",
     "    global board\n",
-    "    newInput = input(\"Choose a block (e.g. TopL, MidM, BottomR): \")\n",
+    "    newInput = 'Invalid'\n",
+    "    while(newInput not in ('TopL', 'TopM', 'TopR', 'BottomL', 'BottomM', 'BottomR', 'MidL', 'MidM', 'MidR')):\n",
+    "        newInput = input(\"Choose a block (e.g. TopL, MidM, BottomR): \")\n",
+    "        if(newInput not in ('TopL', 'TopM', 'TopR', 'BottomL', 'BottomM', 'BottomR', 'MidL', 'MidM', 'MidR')):\n",
+    "            print(\"Please choose one of these ( 'TopL', 'TopM', 'TopR', 'MidL', 'MidM', 'MidR', 'BottomL', 'BottomM', 'BottomR')\")\n",
     "    board[newInput] = player\n",
     "\n",
+    "#check winner\n",
     "def checkWinner():\n",
     "    global board\n",
     "    boardList = list(board.values())\n",
     "    for x in range(0,7,3):\n",
-    "        if(boardList[x] == boardList[x+1] == boardList[x+2]):\n",
-    "            return \"1st: Winner is \"+boardList[x]\n",
+    "        if(boardList[x] == boardList[x+1] == boardList[x+2] == 'O' or boardList[x] == boardList[x+1] == boardList[x+2] == 'X'):\n",
+    "            return boardList[x]\n",
     "    for x in range(0,3):      \n",
-    "        if(boardList[x] == boardList[x+3] == boardList[x+6]):\n",
-    "            return \"2nd: Winner is \"+boardList[x]\n",
-    "    if( boardList[0]== boardList[4]== boardList[8]):\n",
-    "        return \"3rd: Winner is \"+boardList[0]\n",
-    "    if( boardList[2]== boardList[4]== boardList[6]):\n",
-    "        return \"4th: Winner is \"+boardList[2]\n",
+    "        if(boardList[x] == boardList[x+3] == boardList[x+6] == 'O' or boardList[x] == boardList[x+3] == boardList[x+6] == 'X' ):\n",
+    "            return boardList[x]\n",
+    "    if( boardList[0]== boardList[4]== boardList[8] == 'O' or  boardList[0]== boardList[4]== boardList[8] == 'X'):\n",
+    "        return boardList[0]\n",
+    "    if( boardList[2]== boardList[4]== boardList[6] == 'O' or  boardList[2]== boardList[4]== boardList[6] == 'X'):\n",
+    "        return boardList[2]\n",
     "    return \"Not yet\"\n",
     "    \n",
     "#main \n",
-    "#getPlayerChoice()\n",
-    "#getPlayerInput()\n",
-    "printBoard()\n",
-    "print(checkWinner())\n"
+    "print(\"Welcome to Tic Tac Toe!\\n\")\n",
+    "getPlayerChoice()\n",
+    "while(checkWinner() == \"Not yet\"):\n",
+    "    getPlayerInput()\n",
+    "    printBoard()\n",
+    "print(\"Winner is: \"+ \"Player (\"+player+\")\" if player==checkWinner() else \"Bot (\"+bot+\")\")"
    ]
   },
   {
