Added some validation

--- a/TicTacToe.ipynb
+++ b/TicTacToe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -12,6 +12,7 @@
       "Welcome to Tic Tac Toe!\n",
       "\n",
       "Do you wanna be X or O?: x\n",
+      "\n",
       "Choose a block (e.g. TopL, MidM, BottomR): TopL\n",
       "X |   |  \n",
       "  |   |  \n",
@@ -22,8 +23,21 @@
       "  | X |  \n",
       "  |   |  \n",
       "\n",
+      "Choose a block (e.g. TopL, MidM, BottomR): MidM\n",
+      "\n",
+      "Wrong! Please choose one of these: ['TopM', 'TopR', 'MidL', 'MidR', 'BottomL', 'BottomM', 'BottomR']\n",
+      "\n",
+      "Choose a block (e.g. TopL, MidM, BottomR): TopR\n",
+      "X |   | X\n",
+      "  | X |  \n",
+      "  |   |  \n",
+      "\n",
+      "Choose a block (e.g. TopL, MidM, BottomR): TopR\n",
+      "\n",
+      "Wrong! Please choose one of these: ['TopM', 'MidL', 'MidR', 'BottomL', 'BottomM', 'BottomR']\n",
+      "\n",
       "Choose a block (e.g. TopL, MidM, BottomR): BottomR\n",
-      "X |   |  \n",
+      "X |   | X\n",
       "  | X |  \n",
       "  |   | X\n",
       "\n",
@@ -35,7 +49,7 @@
     "#imports\n",
     "\n",
     "\n",
-    "#define variables\n",
+    "#defining global variables\n",
     "player = ''\n",
     "bot = ''\n",
     "board = {\n",
@@ -47,9 +61,11 @@
     "    'MidR':' ', \n",
     "    'BottomL':' ',\n",
     "    'BottomM':' ',\n",
-    "    'BottomR':' ',    \n",
-    "    \n",
+    "    'BottomR':' '\n",
     "}\n",
+    "possibleBlocks = ['TopL', 'TopM', 'TopR', 'MidL', 'MidM', 'MidR', 'BottomL', 'BottomM', 'BottomR']\n",
+    "\n",
+    "\n",
     "\n",
     "#get Player's choice\n",
     "def getPlayerChoice():\n",
@@ -62,7 +78,7 @@
     "def printBoard():\n",
     "    print(board['TopL'] + \" | \"+ board['TopM'] +\" | \"+ board['TopR'] +\"\\n\"+\n",
     "         board['MidL'] + \" | \"+ board['MidM'] +\" | \"+ board['MidR'] +\"\\n\"+\n",
-    "         board['BottomL'] + \" | \"+ board['BottomM'] +\" | \"+ board['BottomR'] +\"\\n\"\n",
+    "         board['BottomL'] + \" | \"+ board['BottomM'] +\" | \"+ board['BottomR']\n",
     "         )\n",
     "\n",
     "#get player's new input and call botInput    \n",
@@ -70,12 +86,23 @@
     "    global player\n",
     "    global board\n",
     "    newInput = 'Invalid'\n",
-    "    while(newInput not in ('TopL', 'TopM', 'TopR', 'BottomL', 'BottomM', 'BottomR', 'MidL', 'MidM', 'MidR')):\n",
-    "        newInput = input(\"Choose a block (e.g. TopL, MidM, BottomR): \")\n",
-    "        if(newInput not in ('TopL', 'TopM', 'TopR', 'BottomL', 'BottomM', 'BottomR', 'MidL', 'MidM', 'MidR')):\n",
-    "            print(\"Please choose one of these ( 'TopL', 'TopM', 'TopR', 'MidL', 'MidM', 'MidR', 'BottomL', 'BottomM', 'BottomR')\")\n",
+    "    validBlocks = []\n",
+    "    \n",
+    "    for key in board.keys():\n",
+    "        if(board[key] == ' '):\n",
+    "            validBlocks.append(key)\n",
+    "    \n",
+    "    while(newInput not in validBlocks):\n",
+    "        newInput = input(\"\\nChoose a block (e.g. TopL, MidM, BottomR): \")\n",
+    "        if(newInput not in validBlocks):\n",
+    "            print(\"\\nWrong! Please choose one of these: \"+str(validBlocks))\n",
     "    board[newInput] = player\n",
     "\n",
+    "#core TTT AI    \n",
+    "def getBotInput():\n",
+    "    print(\"Bot played!\")\n",
+    "    \n",
+    "    \n",
     "#check winner\n",
     "def checkWinner():\n",
     "    global board\n",
@@ -98,8 +125,15 @@
     "while(checkWinner() == \"Not yet\"):\n",
     "    getPlayerInput()\n",
     "    printBoard()\n",
-    "print(\"Winner is: \"+ \"Player (\"+player+\")\" if player==checkWinner() else \"Bot (\"+bot+\")\")"
+    "print(\"\\nWinner is: \"+ \"Player (\"+player+\")\" if player==checkWinner() else \"Bot (\"+bot+\")\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
