Added AI (minimax)

--- a/TicTacToe.ipynb
+++ b/TicTacToe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -10,48 +10,67 @@
      "output_type": "stream",
      "text": [
       "Welcome to Tic Tac Toe!\n",
-      "\n",
       "Do you wanna be X or O?: x\n",
       "\n",
       "Choose a block (e.g. TopL, MidM, BottomR): TopL\n",
+      "\n",
       "X |   |  \n",
       "  |   |  \n",
       "  |   |  \n",
       "\n",
-      "Choose a block (e.g. TopL, MidM, BottomR): MidM\n",
+      "Bot played!\n",
+      "\n",
       "X |   |  \n",
-      "  | X |  \n",
+      "  | O |  \n",
       "  |   |  \n",
       "\n",
-      "Choose a block (e.g. TopL, MidM, BottomR): MidM\n",
+      "Choose a block (e.g. TopL, MidM, BottomR): TopM\n",
       "\n",
-      "Wrong! Please choose one of these: ['TopM', 'TopR', 'MidL', 'MidR', 'BottomL', 'BottomM', 'BottomR']\n",
-      "\n",
-      "Choose a block (e.g. TopL, MidM, BottomR): TopR\n",
-      "X |   | X\n",
-      "  | X |  \n",
+      "X | X |  \n",
+      "  | O |  \n",
       "  |   |  \n",
       "\n",
-      "Choose a block (e.g. TopL, MidM, BottomR): TopR\n",
+      "Bot played!\n",
       "\n",
-      "Wrong! Please choose one of these: ['TopM', 'MidL', 'MidR', 'BottomL', 'BottomM', 'BottomR']\n",
+      "X | X | O\n",
+      "  | O |  \n",
+      "  |   |  \n",
+      "\n",
+      "Choose a block (e.g. TopL, MidM, BottomR): BottomL\n",
+      "\n",
+      "X | X | O\n",
+      "  | O |  \n",
+      "X |   |  \n",
+      "\n",
+      "Bot played!\n",
+      "\n",
+      "X | X | O\n",
+      "O | O |  \n",
+      "X |   |  \n",
       "\n",
       "Choose a block (e.g. TopL, MidM, BottomR): BottomR\n",
-      "X |   | X\n",
-      "  | X |  \n",
-      "  |   | X\n",
       "\n",
-      "Winner is: Player (X)\n"
+      "X | X | O\n",
+      "O | O |  \n",
+      "X |   | X\n",
+      "\n",
+      "Bot played!\n",
+      "\n",
+      "X | X | O\n",
+      "O | O | O\n",
+      "X |   | X\n",
+      "\n",
+      "Winner is: Bot (O)\n"
      ]
     }
    ],
    "source": [
     "#imports\n",
-    "\n",
+    "import time\n",
     "\n",
     "#defining global variables\n",
-    "player = ''\n",
-    "bot = ''\n",
+    "player = ' '\n",
+    "bot = ' '\n",
     "board = {\n",
     "    'TopL':' ',\n",
     "    'TopM':' ',\n",
@@ -76,7 +95,7 @@
     "\n",
     "#print board's current status\n",
     "def printBoard():\n",
-    "    print(board['TopL'] + \" | \"+ board['TopM'] +\" | \"+ board['TopR'] +\"\\n\"+\n",
+    "    print(\"\\n\"+board['TopL'] + \" | \"+ board['TopM'] +\" | \"+ board['TopR'] +\"\\n\"+\n",
     "         board['MidL'] + \" | \"+ board['MidM'] +\" | \"+ board['MidR'] +\"\\n\"+\n",
     "         board['BottomL'] + \" | \"+ board['BottomM'] +\" | \"+ board['BottomR']\n",
     "         )\n",
@@ -97,15 +116,69 @@
     "        if(newInput not in validBlocks):\n",
     "            print(\"\\nWrong! Please choose one of these: \"+str(validBlocks))\n",
     "    board[newInput] = player\n",
+    "    printBoard()\n",
+    "    getBotInput()\n",
     "\n",
     "#core TTT AI    \n",
     "def getBotInput():\n",
-    "    print(\"Bot played!\")\n",
+    "    bestScore = -999\n",
+    "    bestMove = 'Temp'\n",
+    "    \n",
+    "    for key in board.keys():\n",
+    "        if(board[key] == ' '):\n",
+    "            board[key] = bot\n",
+    "            score = minimax(board, 0, False)\n",
+    "            board[key] = ' '\n",
+    "            if(score > bestScore):\n",
+    "                bestScore = score\n",
+    "                bestMove = key    \n",
+    "    board[bestMove] = bot\n",
+    "    time.sleep(1)\n",
+    "    print(\"\\nBot played!\")\n",
+    "    printBoard()\n",
+    "    \n",
+    "def minimax(board, depth, isMaximizing):\n",
+    "    #print(\"Printing board from minimax!\")\n",
+    "    #printBoard()\n",
+    "    checkWin = checkWinner()\n",
+    "    if(checkWin==bot):\n",
+    "        return 100\n",
+    "    elif(checkWin==player):\n",
+    "        return -100\n",
+    "    elif(checkWin=='Draw'):\n",
+    "        return 0\n",
+    "    \n",
+    "    if isMaximizing:\n",
+    "        bestScore = -1000\n",
+    "\n",
+    "        for key in board.keys():\n",
+    "            if(board[key] == ' '):\n",
+    "                board[key] = bot\n",
+    "                score = minimax(board, 0, False)\n",
+    "                board[key] = ' '\n",
+    "                if(score > bestScore):\n",
+    "                    bestScore = score\n",
+    "        \n",
+    "        return bestScore\n",
+    "    \n",
+    "    else:\n",
+    "        bestScore = 800\n",
+    "\n",
+    "        for key in board.keys():\n",
+    "            if(board[key] == ' '):\n",
+    "                board[key] = player\n",
+    "                score = minimax(board, depth + 1, True)\n",
+    "                board[key] = ' '\n",
+    "                if(score < bestScore):\n",
+    "                    bestScore = score\n",
+    "        \n",
+    "        return bestScore\n",
     "    \n",
     "    \n",
     "#check winner\n",
     "def checkWinner():\n",
     "    global board\n",
+    "    emptyBoxes = 0\n",
     "    boardList = list(board.values())\n",
     "    for x in range(0,7,3):\n",
     "        if(boardList[x] == boardList[x+1] == boardList[x+2] == 'O' or boardList[x] == boardList[x+1] == boardList[x+2] == 'X'):\n",
@@ -117,15 +190,25 @@
     "        return boardList[0]\n",
     "    if( boardList[2]== boardList[4]== boardList[6] == 'O' or  boardList[2]== boardList[4]== boardList[6] == 'X'):\n",
     "        return boardList[2]\n",
+    "    for key in board:\n",
+    "        if(board[key] == ' '):\n",
+    "            emptyBoxes = emptyBoxes + 1 \n",
+    "    if(emptyBoxes == 0):\n",
+    "        return \"Draw\"\n",
     "    return \"Not yet\"\n",
     "    \n",
     "#main \n",
-    "print(\"Welcome to Tic Tac Toe!\\n\")\n",
+    "print(\"Welcome to Tic Tac Toe!\")\n",
     "getPlayerChoice()\n",
     "while(checkWinner() == \"Not yet\"):\n",
     "    getPlayerInput()\n",
-    "    printBoard()\n",
-    "print(\"\\nWinner is: \"+ \"Player (\"+player+\")\" if player==checkWinner() else \"Bot (\"+bot+\")\")"
+    "\n",
+    "winner = checkWinner()\n",
+    "if(winner == \"Draw\"):\n",
+    "    print(\"\\nMatch drawn!\")\n",
+    "else:\n",
+    "    print(\"\\nWinner is: \", end='')\n",
+    "    print(Player+\"(\"+player+\")\" if player==checkWinner() else \"Bot (\"+bot+\")\")"
    ]
   },
   {
