Some more validation

--- a/TicTacToe.ipynb
+++ b/TicTacToe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -24,43 +24,49 @@
       "  | O |  \n",
       "  |   |  \n",
       "\n",
-      "Choose a block (e.g. TopL, MidM, BottomR): TopM\n",
-      "\n",
-      "X | X |  \n",
-      "  | O |  \n",
-      "  |   |  \n",
-      "\n",
-      "Bot played!\n",
-      "\n",
-      "X | X | O\n",
-      "  | O |  \n",
-      "  |   |  \n",
-      "\n",
-      "Choose a block (e.g. TopL, MidM, BottomR): BottomL\n",
-      "\n",
-      "X | X | O\n",
-      "  | O |  \n",
-      "X |   |  \n",
-      "\n",
-      "Bot played!\n",
-      "\n",
-      "X | X | O\n",
-      "O | O |  \n",
-      "X |   |  \n",
-      "\n",
       "Choose a block (e.g. TopL, MidM, BottomR): BottomR\n",
       "\n",
-      "X | X | O\n",
-      "O | O |  \n",
-      "X |   | X\n",
+      "X |   |  \n",
+      "  | O |  \n",
+      "  |   | X\n",
       "\n",
       "Bot played!\n",
       "\n",
-      "X | X | O\n",
-      "O | O | O\n",
-      "X |   | X\n",
+      "X | O |  \n",
+      "  | O |  \n",
+      "  |   | X\n",
       "\n",
-      "Winner is: Bot (O)\n"
+      "Choose a block (e.g. TopL, MidM, BottomR): BottomM\n",
+      "\n",
+      "X | O |  \n",
+      "  | O |  \n",
+      "  | X | X\n",
+      "\n",
+      "Bot played!\n",
+      "\n",
+      "X | O |  \n",
+      "  | O |  \n",
+      "O | X | X\n",
+      "\n",
+      "Choose a block (e.g. TopL, MidM, BottomR): TopR\n",
+      "\n",
+      "X | O | X\n",
+      "  | O |  \n",
+      "O | X | X\n",
+      "\n",
+      "Bot played!\n",
+      "\n",
+      "X | O | X\n",
+      "  | O | O\n",
+      "O | X | X\n",
+      "\n",
+      "Choose a block (e.g. TopL, MidM, BottomR): MidL\n",
+      "\n",
+      "X | O | X\n",
+      "X | O | O\n",
+      "O | X | X\n",
+      "\n",
+      "Match drawn!\n"
      ]
     }
    ],
@@ -82,9 +88,6 @@
     "    'BottomM':' ',\n",
     "    'BottomR':' '\n",
     "}\n",
-    "possibleBlocks = ['TopL', 'TopM', 'TopR', 'MidL', 'MidM', 'MidR', 'BottomL', 'BottomM', 'BottomR']\n",
-    "\n",
-    "\n",
     "\n",
     "#get Player's choice\n",
     "def getPlayerChoice():\n",
@@ -117,7 +120,14 @@
     "            print(\"\\nWrong! Please choose one of these: \"+str(validBlocks))\n",
     "    board[newInput] = player\n",
     "    printBoard()\n",
-    "    getBotInput()\n",
+    "    \n",
+    "    availableCount = 0\n",
+    "    for key in board.keys():\n",
+    "        if(board[key] == ' '):\n",
+    "            availableCount = availableCount+1\n",
+    "        \n",
+    "    if(availableCount > 0):\n",
+    "        getBotInput()\n",
     "\n",
     "#core TTT AI    \n",
     "def getBotInput():\n",
@@ -142,14 +152,14 @@
     "    #printBoard()\n",
     "    checkWin = checkWinner()\n",
     "    if(checkWin==bot):\n",
-    "        return 100\n",
+    "        return 1000\n",
     "    elif(checkWin==player):\n",
-    "        return -100\n",
+    "        return -1000\n",
     "    elif(checkWin=='Draw'):\n",
     "        return 0\n",
     "    \n",
     "    if isMaximizing:\n",
-    "        bestScore = -1000\n",
+    "        bestScore = -10000\n",
     "\n",
     "        for key in board.keys():\n",
     "            if(board[key] == ' '):\n",
@@ -162,7 +172,7 @@
     "        return bestScore\n",
     "    \n",
     "    else:\n",
-    "        bestScore = 800\n",
+    "        bestScore = 9999\n",
     "\n",
     "        for key in board.keys():\n",
     "            if(board[key] == ' '):\n",
